# setuptools_scm_azure_pipelines

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yaml
src/setuptools_scm_azure_pipelines/: __init__.py
test/: test_setuptools_scm_azure_pipelines.py
