[metadata]
name = setuptools_scm_azure_pipelines
description = 'setuptools_scm plugin that versions `post` packages with Azure Pipelines BUILD_BUILDID number.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3rwww1/setuptools_scm_azure_pipelines/
author = 'Erwan Queffélec'
author_email = 'erwan.queffelec@gmail.com'
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Version Control
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
packages = find:
install_requires =
    setuptools_scm
python_requires = >=3.6
package_dir =
    =src
zip_safe = true

[options.packages.find]
where = src

[options.entry_points]
setuptools_scm.version_scheme =
    post-release-azure-build-id = setuptools_scm_azure_pipelines.version:postrelease_azure_build_id

[flake8]
exclude = .git, __pycache__, build, dist, .venv, .tox
max_complexity = 10
max_line_length = 119
max_doc_length = 119

[mypy]
files = src
